test/error/parse/ErrAstBegin.mod
MODULE ErrAstBegin;
CONST A = 1 DIV 0;
END ErrAstBegin.
